--- a/public/css/main.css
+++ b/public/css/main.css
@@ -15,3 +15,21 @@ select{
     border-radius: 0;
     background: #fff;
 }
+label[for=tourDate] img{cursor: pointer}
+.popular-item-phone.has-error input {
+    border: 1px solid #f00 !important;
+    color: red;
+    -webkit-transition: ease-in-out 0.2s;
+    -moz-transition: ease-in-out 0.2s;
+    -ms-transition: ease-in-out 0.2s;
+    -o-transition: ease-in-out 0.2s;
+    transition: ease-in-out 0.2s;
+}
+@media (max-width: 768px) {
+    .header .menu .navbar-collapse li a.hot {
+        padding-left: 15px !important;
+    }
+}
+.tours-sorting-items a {
+    padding: 5px 0;
+}
