--- a/public/css/main.css
+++ b/public/css/main.css
@@ -37,3 +37,12 @@ label[for=tourDate] img{cursor: pointer}
     background: #ff5500;
     color: #fff;
 }
+.font38{
+    font-size: 38px;
+}
+.slider-tour-price{
+    background: rgb(253, 228, 14);
+    display: inline-block;
+    margin-top: 5px;
+}
+.slider-tour-price span{margin: 5px;}
