--- a/public/css/style.css
+++ b/public/css/style.css
@@ -495,6 +495,7 @@ h2, .h2 {
 }
 .tour-filter-item.value input {
 	width: 49%;
+	font-family: "Open Sans", sans-serif;
 }
 .tour-filter-more {
 	display: inline-block;
