Add back tours image

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -87,3 +87,6 @@ input[name=tourDate]{
     float: right;
     cursor: pointer;
 }
+.back-tours{
+    background: url(../img/back-tours.jpg) 50% 50% no-repeat;
+}
