--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2046,7 +2046,7 @@ div.dp-popup h2 {
 }
 .card-base-price ul li {
 	margin-bottom: 20px;
-	font-size: 8px;
+	/*font-size: 8px;*/
 }
 .card-base-price ul li span {
 	font-size: 15px;
