--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1129,6 +1129,12 @@ h2, .h2 {
 .soc a.fb {
 	background: url(../img/soc-sprite.png) -54px 0 no-repeat;
 }
+.soc a.inst {
+	background: url(../img/soc-sprite.png) -81px 0 no-repeat;
+}
+.soc a.ok {
+	background: url(../img/soc-sprite.png) -108px 0 no-repeat;
+}
 .footer .container {
 	padding: 40px 0 30px 0;
 	border-top: 1px solid #e1e1e1;
