--- a/public/css/style.css
+++ b/public/css/style.css
@@ -707,6 +707,7 @@ h2, .h2 {
 	top: 0;
 	width: 100%;
 	height: 100%;
+	cursor: pointer;
 }
 .burning-tours-item:hover .burning-tours-item-img {
 	opacity: 0.7;
@@ -1362,6 +1363,7 @@ a.dp-choose-date {
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
+	text-decoration: underline;
 
 }
 .search-completed-preview-left ul li {
@@ -1475,6 +1477,8 @@ a.dp-choose-date {
 	display: block;
 	overflow: hidden;
 	position: relative;
+	cursor: pointer;
+
 }
 .search-completed-item-desc {
 	font-family: 'pantonlight';
