--- a/public/css/main.css
+++ b/public/css/main.css
@@ -119,3 +119,16 @@ a.order{
 #sletatForm .filterDate{
     margin-right: 0;
 }
+.scrollingBlock{
+    height: 200px;
+    overflow: scroll;
+    background: #fff;
+    color: #000;
+    padding: 5px 0;
+}
+.scrollingBlock input{
+    width: 30px;
+    height: 0px;
+}
+.scrollingBlock div{height: 25px;}
+.scrollingBlock span{float: none;color: brown;}
