--- a/public/css/main.css
+++ b/public/css/main.css
@@ -237,3 +237,7 @@ a.order {
 .meals .allChecked, .stars .allChecked {
     display: block !important;
 }
+
+.background-white{
+    background: #fff;
+}
