--- a/public/css/main.css
+++ b/public/css/main.css
@@ -231,7 +231,6 @@ a.order {
 
 #sletatForm input[type=submit] {
     width: 270px;
-
 }
 
 .meals .allChecked, .stars .allChecked {
@@ -240,4 +239,24 @@ a.order {
 
 .background-white{
     background: #fff;
+}
+
+.progress-bar-wrapper {
+    width: 100%;
+}
+
+.progress-bar {
+    width: 100%;
+    background-color: #e0e0e0;
+    padding: 3px;
+    border-radius: 0 0 3px 3px;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, .2);
+}
+
+.progress-bar-fill {
+    display: block;
+    height: 22px;
+    background-color: #42b0eb;
+    border-radius: 3px;
+    transition: width 500ms ease-in-out;
 }
