git state check

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -1,66 +1,157 @@
-html,body,a,button,div,span{
+html, body, a, button, div, span {
     font-family: sans-serif !important;
 }
 
-select.form-control:not([size]):not([multiple]){
-    height:auto;
+select.form-control:not([size]):not([multiple]) {
+    height: auto;
 }
 
-.m-login.m-login--2 .m-login__wrapper .m-login__container .m-login__form .m-form__group .form-control{
-    margin-top:0;
+.m-login.m-login--2 .m-login__wrapper .m-login__container .m-login__form .m-form__group .form-control {
+    margin-top: 0;
 }
 
-.form-group.m-form__group{
-    margin-bottom:30px !important;
+.form-group.m-form__group {
+    margin-bottom: 30px !important;
 }
 
-.m-login.m-login--2 .m-login__wrapper{
-    padding-top:30px;
+.m-login.m-login--2 .m-login__wrapper {
+    padding-top: 30px;
 }
 
-.m-login.m-login--5 .m-login__wrapper-2{
-    padding-top:7%;
+.m-login.m-login--5 .m-login__wrapper-2 {
+    padding-top: 7%;
 }
 
-.m-login.m-login--5 .m-login__wrapper-1 .m-login__wrapper-1-1 .m-login__border{
-    padding-top:23%;
-}
-.m-login__form-action{
-    text-align:center;
-    margin-top:60px;
+.m-login.m-login--5 .m-login__wrapper-1 .m-login__wrapper-1-1 .m-login__border {
+    padding-top: 23%;
 }
 
-.progress{
-    overflow:inherit;
+.m-login__form-action {
+    text-align: center;
+    margin-top: 60px;
 }
-.progress.m-progress--sm{
-    position:relative;
+
+.progress {
+    overflow: inherit;
 }
-.progress.m-progress--sm .required{
-    display:block;
-    height:20px;
+
+.progress.m-progress--sm {
+    position: relative;
+}
+
+.progress.m-progress--sm .required {
+    display: block;
+    height: 20px;
     position: absolute;
-    left:80%;
-    bottom:0;
-    border-left:1px solid #aaa;
-    color:#333;
-    padding-left:5px;
+    left: 80%;
+    bottom: 0;
+    border-left: 1px solid #aaa;
+    color: #333;
+    padding-left: 5px;
 }
 
-.m-brand__logo img{
-    height:40px;
+.m-brand__logo img {
+    height: 40px;
 }
 
-
-.fly-cc{
-    column-count:2;
+.fly-cc {
+    column-count: 2;
     column-gap: 20px;
     font-family: RobotoL !important;
 }
-ul.pagination{}
-.pagination li{}
-.pagination a{padding: 10px 15px;border: 1px solid #eee;margin: 0 2px;border-radius: 3px;color: cadetblue;}
-.pagination span{padding: 10px 15px;}
-.dropzone .dz-preview .dz-image img{
+
+ul.pagination {
+}
+
+.pagination li {
+}
+
+.pagination a {
+    padding: 10px 15px;
+    border: 1px solid #eee;
+    margin: 0 2px;
+    border-radius: 3px;
+    color: cadetblue;
+}
+
+.pagination span {
+    padding: 10px 15px;
+}
+
+.dropzone .dz-preview .dz-image img {
     max-height: 100%;
+}
+
+.tour-type-element {
+    display: inline-block;
+    border-right: 1px solid #ccc;
+    padding: 5px 10px 10px;
+    border-top: 1px solid #ccc;
+}
+
+.tour-type-element input {
+    margin-right: 5px;
+}
+
+.tour-date-picker span {
+}
+
+.datepickerInput {
+    width: 110px;
+    display: inline-block;
+}
+
+.tour-date-picker {
+    margin-top: 10px;
+    border-top: 1px solid #eee;
+    padding-top: 10px;
+}
+
+.tour-date-picker label {
+    font-weight: bold;
+}
+
+.existDates div {
+    margin-bottom: 5px;
+    margin-right: 3px;
+    display: inline-block;
+    padding: 5px 10px;
+    border-radius: 5px;
+}
+
+.existDates span {
+    padding: 0 0 0 5px;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.date-control-block {
+    margin-top: 10px;
+}
+
+.routeList span {
+    margin-bottom: 5px;
+    margin-right: 3px;
+    display: inline-block;
+    padding: 5px 10px;
+    border-radius: 5px;
+}
+
+.routeList span i {
+    padding: 0 0 0 5px;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.margTop15 {
+    margin-top: 15px;
+}
+
+.routeList + select {
+    width: 180px;
+    display: inline-block;
+}
+
+.routeList + select + .btn {
+    display: inline-block;
 }
